tests/semantic/12-type-if.ref
"tests/semantic/12-type-if.cl", line 7:17, Semantic error: If condition has type Int instead of Bool
"tests/semantic/12-type-if.cl", line 7:14, Semantic error: Type Object of assigned expression is incompatible with declared type Int of identifier x
"tests/semantic/12-type-if.cl", line 15:14, Semantic error: Type B of assigned expression is incompatible with declared type C of identifier c
Compilation halted
